--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Temperature Tracker",
   "short_name": "TempTrack",
   "description": "Track your daily temperature readings",
-  "start_url": "/index.html",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
