--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,11 @@
   "name": "Temperature Tracker",
   "short_name": "TempTrack",
   "description": "Track your daily temperature readings",
-  "start_url": "index.html",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "icons/icon-192x192.png",
@@ -16,7 +17,17 @@
     {
       "src": "icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
+  "splash_pages": null,
+  "screenshots": [
+    {
+      "src": "icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "form_factor": "wide"
     }
   ]
 }
