Bug fix and dark mode improvement
Fix confirmation bug when deleting data and made the splash screen respect dark mode.

--- a/manifest.json
+++ b/manifest.json
@@ -29,5 +29,9 @@
       "type": "image/png",
       "form_factor": "wide"
     }
-  ]
+  ],
+  "dark_mode": {
+    "background_color": "#000000",
+    "theme_color": "#000000"
+  }
 }
